# fracgen

./: .gitignore  Cargo.toml  readme.md
src/: color.rs  lib.rs  main.rs  renderer.rs  rgbaf.rs
