[package]
name = "fracgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
err-derive = "0.3.1"
image = "0.24.1"
linya = "0.2.2"
num = "0.4.0"
num_cpus = "1.13.1"
rand = "0.8.5"
rayon = "1.5.1"

[profile.release]
opt-level = 3 # fast and small wasm
lto = "fat"
codegen-units = 1   